tests/specs/ecosystem/bureaudouble/cmdk/0_0_3.test
bureaudouble/cmdk/0.0.3
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/cmdk/src/index.tsx
error: TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
const Command: React.ForwardRefExoticComponent<Omit<any, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                      ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:76:87

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const Item: React.ForwardRefExoticComponent<Omit<ItemProps, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                             ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:81:94

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const Group: React.ForwardRefExoticComponent<Omit<GroupProps, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                               ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:85:96

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const Separator: React.ForwardRefExoticComponent<Omit<any, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                            ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:89:93

TS2304 [ERROR]: Cannot find name 'HTMLInputElement'.
 */ const Input: React.ForwardRefExoticComponent<Omit<InputProps, "ref"> & React.RefAttributes<HTMLInputElement>> = {} as never;
                                                                                               ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:93:96

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const List: React.ForwardRefExoticComponent<Omit<any, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                       ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:97:88

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const Dialog: React.ForwardRefExoticComponent<Omit<any, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                         ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:100:90

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const Empty: React.ForwardRefExoticComponent<Omit<any, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                        ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:103:89

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
 */ const Loading: React.ForwardRefExoticComponent<Omit<any, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                          ~~~~~~~~~~~~~~
    at file://<tmpdir>/cmdk/src/index.tsx:106:91

Found 9 errors.

